added comments in Computer Science dataset experiment

--- a/biological dataset/PearsonAndWrapperBasedFeatureSelection.ipynb
+++ b/biological dataset/PearsonAndWrapperBasedFeatureSelection.ipynb
@@ -6016,7 +6016,7 @@
     "    error = np.mean(prediction != y_test)\n",
     "    print('\\tError rate : ',error)\n",
     "    errorRate.append(error)\n",
-    "    return error"
+    "    return errorbb"
    ]
   },
   {
